@@ -9,6 +9,15 @@ if test "$PHP_ZIP" != "no"; then
   PHP_EVAL_INCLINE($LIBZIP_CFLAGS)
   PHP_EVAL_LIBLINE($LIBZIP_LIBS, ZIP_SHARED_LIBADD)
 
+  PHP_CHECK_LIBRARY(zip, zip_file_set_mtime,
+  [
+    AC_DEFINE(HAVE_SET_MTIME, 1, [Libzip >= 1.0.0 with zip_file_set_mtime])
+  ], [
+    AC_MSG_WARN(Libzip >= 1.0.0 needed for setting mtime)
+  ], [
+    -L$LIBZIP_LIBDIR
+  ])
+
   PHP_CHECK_LIBRARY(zip, zip_file_set_encryption,
   [
     AC_DEFINE(HAVE_ENCRYPTION, 1, [Libzip >= 1.2.0 with encryption support])
